Bleep. Bloop. I am a bot.

--- a/Adding-new-projects-to-wrapdb.html
+++ b/Adding-new-projects-to-wrapdb.html
@@ -202,7 +202,7 @@ lowercase only (Catch2 -&gt; catch2).</p>
 should be provided. In other case a Meson build definition patch - a set of <code>meson.build</code>
 files - should be also provided.</p>
 <h3 id="request-a-new-repository-or-branch">Request a new repository or branch</h3>
-<p>Create an issue on the <a href="https://github.com/mesonbuild/wrapweb/issues">wrapweb bug tracker</a>
+<p>Create an issue on the <a href="https://github.com/mesonbuild/wrapdb/issues">wrapdb bug tracker</a>
 using <em>Title</em> and <em>Description</em> below as a template.</p>
 <p><em>Title:</em> <code>new wrap: &lt;project_name&gt;</code></p>
 <p><em>Description:</em></p>
@@ -261,7 +261,7 @@ may also host your own Git repo with the changes if you wish. The Wrap
 system has native support for Git subprojects.</p>
 <h2 id="creator-script">Creator script</h2>
 <p>The WrapDB repository has a
-<a href="https://github.com/mesonbuild/wrapweb/blob/master/mesonwrap.py">helper script</a>
+<a href="https://github.com/mesonbuild/mesonwrap/blob/master/mesonwrap.py">helper script</a>
 to generate new repositories, verify them and update them.</p>
 <h2 id="reviewing-wraps">Reviewing wraps</h2>
 <p>See <a href="Wrap-review-guidelines.html">Wrap review guidelines</a>.</p>
