Bleep. Bloop. I am a bot.

--- a/Dependencies.html
+++ b/Dependencies.html
@@ -424,6 +424,7 @@ dependencies.</p>
 <p>As of 0.44.0 Meson supports the <code>static</code> keyword argument for
 LLVM. Before this LLVM &gt;= 3.9 would always dynamically link, while
 older versions would statically link, due to a quirk in <code>llvm-config</code>.</p>
+<p><code>method</code> may be <code>auto</code>, <code>config-tool</code>, or <code>cmake</code>.</p>
 <h3 id="modules-aka-components">Modules, a.k.a. Components</h3>
 <p>Meson wraps LLVM's concept of components in it's own modules concept.
 When you need specific components you add them as modules as meson
