--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -2384,7 +2384,9 @@ contains a target with the following methods:</p>
 <p><code>full_path()</code> returns a full path pointing to the result target file
 NOTE: In most cases using the object itself will do the same job as
 this and will also allow Meson to setup inter-target dependencies
-correctly. Please file a bug if that doesn't work for you.</p>
+correctly. Please file a bug if that doesn't work for you.
+<em>Since 0.54.0</em> it can be also called on indexes objects:
+<code>custom_targets[i].full_path()</code>.</p>
 </li>
 <li>
 <p><code>[index]</code> returns an opaque object that references this target, and
@@ -2392,6 +2394,11 @@ can be used as a source in other targets. When it is used as such it
 will make that target depend on this custom target, but the only
 source added will be the one that corresponds to the index of the
 custom target's output argument.</p>
+</li>
+<li>
+<p><code>to_list()</code> <em>Since 0.54.0</em>, returns a list of opaque objects that references
+this target, and can be used as a source in other targets. This can be used to
+iterate outputs with <code>foreach</code> loop.</p>
 </li>
 </ul>
 <h3 id="dependency-object">
