Bleep. Bloop. I am a bot.

--- a/CMake-module.html
+++ b/CMake-module.html
@@ -188,8 +188,8 @@ $('body').removeClass('no-script');
 	<div id="main">
 				    <div id="page-description" data-hotdoc-role="main">
         <h1 id="cmake-module">CMake module</h1>
-<p><strong>Note</strong>: the functionality of this module is governed by [Meson's
-rules on mixing build systems](Mixing-build-systems.md].</p>
+<p><strong>Note</strong>: the functionality of this module is governed by <a href="Mixing-build-systems.html">Meson's
+rules on mixing build systems</a>.</p>
 <p>This module provides helper tools for generating cmake package files.
 It also supports the usage of CMake based subprojects, similar to
 the normal <a href="Subprojects.html">meson subprojects</a>.</p>
