--- a/Pkgconfig-module.html
+++ b/Pkgconfig-module.html
@@ -261,6 +261,8 @@ generating the uninstalled pkg-config file. Since <em>0.54.0</em>
 <li>
 <code>dataonly</code> field. (<em>since 0.54.0</em>) this is used for architecture-independent
 pkg-config files in projects which also have architecture-dependent outputs.</li>
+<li>
+<code>conflicts</code> (<em>since 0.36.0, incorrectly issued a warning prior to 0.54.0</em>) list of strings to be put in the <code>Conflicts</code> field.</li>
 </ul>
 <p>Since 0.46 a <code>StaticLibrary</code> or <code>SharedLibrary</code> object can optionally be passed
 as first positional argument. If one is provided a default value will be
