--- a/Qt5-module.html
+++ b/Qt5-module.html
@@ -220,6 +220,26 @@ tools and steps required for Qt. The module has two methods.</p>
 <li>
 <code>build_by_default</code> when set to true, to have this target be built by default, that is, when invoking plain ninja; the default value is false (optional).</li>
 </ul>
+<h2 id="has_tools">has_tools</h2>
+<p>This method returns <code>true</code> if all tools used by this module are found, <code>false</code>
+otherwise.</p>
+<p>It should be used to compile optional Qt code:</p>
+<pre><code class="language-meson">qt5 = import('qt5')
+if qt5.has_tools(required: get_option('qt_feature'))
+  moc_files = qt5.preprocess(...)
+  ...
+endif
+</code></pre>
+<p>This method takes the following keyword arguments:</p>
+<ul>
+<li>
+<code>required</code>: by default, <code>required</code> is set to <code>false</code>. If <code>required</code> is set to
+<code>true</code> or an enabled <a href="Build-options.html#features"><code>feature</code></a> and some tools are
+missing Meson will abort.</li>
+<li>
+<code>method</code>: method used to find the Qt dependency (<code>auto</code> by default).</li>
+</ul>
+<p><em>Since: 0.54.0</em></p>
 <h2 id="dependencies">Dependencies</h2>
 <p>See <a href="Dependencies.html#qt4-qt5">Qt dependencies</a></p>
 <p>The 'modules' argument is used to include Qt modules in the project.
