--- a/Users.html
+++ b/Users.html
@@ -359,6 +359,8 @@ format files</li>
 <li>
 <a href="https://github.com/OpenHMD/OpenHMD">OpenHMD</a>, a free and open source API and drivers for immersive technology, such as head mounted displays with built in head tracking</li>
 <li>
+<a href="https://github.com/lowRISC/opentitan">OpenTitan</a>, an open source silicon Root of Trust (RoT) project.</li>
+<li>
 <a href="http://cgit.freedesktop.org/gstreamer/orc/">Orc</a>, the Optimized Inner Loop Runtime Compiler</li>
 <li>
 <a href="https://github.com/khaledhosny/ots">OTS</a>, the OpenType Sanitizer, parses and serializes OpenType files (OTF, TTF) and WOFF and WOFF2 font files, validating and sanitizing them as it goes. Used by Chromium and Firefox</li>
