--- a/Pkgconfig-module.html
+++ b/Pkgconfig-module.html
@@ -247,7 +247,7 @@ field</li>
 generated file. The strings must be in the form <code>name=value</code> and may
 reference other pkgconfig variables,
 e.g. <code>datadir=${prefix}/share</code>. The names <code>prefix</code>, <code>libdir</code> and
-<code>installdir</code> are reserved and may not be used.</li>
+<code>includedir</code> are reserved and may not be used.</li>
 <li>
 <code>version</code> a string describing the version of this library, used to set the
 <code>Version:</code> field. (<em>since 0.46.0</em>) Defaults to the project version if unspecified.</li>
