--- a/Build-targets.html
+++ b/Build-targets.html
@@ -188,26 +188,35 @@ $('body').removeClass('no-script');
 	<div id="main">
 				    <div id="page-description" data-hotdoc-role="main">
         <h1 id="build-targets">Build targets</h1>
-<p>Meson provides three kinds of build targets: executables, static
-libraries and shared libraries. They are created with the commands
-<code>executable</code>, <code>static_library</code> and <code>shared_library</code>, respectively. All
-objects created in this way are <strong>immutable</strong>. That is, you can not
-change any aspect of them after they have been constructed. This
-ensures that all information pertaining to a given build target is
-specified in one well defined place.</p>
-<p>As an example, here is how you would build a shared library.</p>
+<p>Meson provides four kinds of build targets: executables, libraries
+(which can be set to be built as static or shared or both of them at
+the build configuration time), static libraries, and shared libraries.
+They are created with the commands <code>executable</code>, <code>static_library</code> and
+<code>shared_library</code>, respectively. All objects created in this way are
+<strong>immutable</strong>. That is, you can not change any aspect of them after
+they have been constructed. This ensures that all information
+pertaining to a given build target is specified in one well defined
+place.</p>
+<h2 id="libraries-and-executables">Libraries and executables</h2>
+<p>As an example, here is how you would build a library.</p>
 <pre><code class="language-meson">project('shared lib', 'c')
-shared_library('mylib', 'source.c')
+library('mylib', 'source.c')
 </code></pre>
+<p>It is generally preferred to use the <code>library</code> command instead of
+<code>shared_library</code> and <code>static_library</code> and then configure which
+libraries (static or shared or both of them) will be built at the
+build configuration time using the <code>default_library</code>
+<a href="Builtin-options.html">built-in option</a>.</p>
 <p>In Unix-like operating systems, shared libraries can be
-versioned. Meson supports this with keyword arguments.</p>
+versioned. Meson supports this with keyword arguments, which will be
+ignored if the library is configured as static at the compile time.</p>
 <pre><code class="language-meson">project('shared lib', 'c')
-shared_library('mylib', 'source.c', version : '1.2.3', soversion : '0')
+library('mylib', 'source.c', version : '1.2.3', soversion : '0')
 </code></pre>
 <p>It is common to build a library and then an executable that links
 against it. This is supported as well.</p>
 <pre><code class="language-meson">project('shared lib', 'c')
-lib = shared_library('mylib', 'source.c')
+lib = library('mylib', 'source.c')
 executable('program', 'prog.c', link_with : lib)
 </code></pre>
 <p>Meson sets things up so that the resulting executable can be run
