Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -282,7 +282,7 @@ by setting them inside <code>default_options</code> of <code>project()</code> in
 </tr>
 </tbody>
 </table>
-<p><code>prefix</code> defaults to <code>C:/</code> on Windows, and <code>/usr/local/</code> otherwise. You should always
+<p><code>prefix</code> defaults to <code>C:/</code> on Windows, and <code>/usr/local</code> otherwise. You should always
 override this value.</p>
 <p><code>libdir</code> is automatically detected based on your platform, it should be
 correct when doing "native" (build machine == host machine) compilation. For
