--- a/Users.html
+++ b/Users.html
@@ -274,7 +274,7 @@ topic</a>.</p>
 <li>
 <a href="https://git.gnome.org/browse/grilo">Grilo</a> and <a href="https://git.gnome.org/browse/grilo-plugins">Grilo plugins</a>, the Grilo multimedia framework</li>
 <li>
-<a href="https://cgit.freedesktop.org/gstreamer/gstreamer/">GStreamer</a>, multimedia framework</li>
+<a href="https://gitlab.freedesktop.org/gstreamer/gstreamer">GStreamer</a>, multimedia framework</li>
 <li>
 <a href="https://gitlab.gnome.org/GNOME/gtk">GTK+</a>, the multi-platform toolkit used by GNOME</li>
 <li>
@@ -288,7 +288,7 @@ topic</a>.</p>
 <li>
 <a href="https://github.com/hexchat/hexchat">HexChat</a>, a cross-platform IRC client in C</li>
 <li>
-<a href="https://cgit.freedesktop.org/xorg/app/intel-gpu-tools/">IGT</a>, Linux kernel graphics driver test suite</li>
+<a href="https://gitlab.freedesktop.org/drm/igt-gpu-tools">IGT</a>, Linux kernel graphics driver test suite</li>
 <li>
 <a href="https://github.com/benhoyt/inih">inih</a> (INI Not Invented Here), a small and simple .INI file parser written in C</li>
 <li>
@@ -313,7 +313,7 @@ topic</a>.</p>
 <li>
 <a href="https://git.linuxtv.org/libcamera.git/">libcamera</a>, a library to handle complex cameras on Linux, ChromeOS and Android</li>
 <li>
-<a href="https://cgit.freedesktop.org/drm/libdrm/">Libdrm</a>, a library for abstracting DRM kernel interfaces</li>
+<a href="https://gitlab.freedesktop.org/mesa/drm">Libdrm</a>, a library for abstracting DRM kernel interfaces</li>
 <li>
 <a href="https://github.com/anholt/libepoxy/">Libepoxy</a>, a library for handling OpenGL function pointer management</li>
 <li>
@@ -363,7 +363,7 @@ format files</li>
 <li>
 <a href="https://github.com/lowRISC/opentitan">OpenTitan</a>, an open source silicon Root of Trust (RoT) project.</li>
 <li>
-<a href="http://cgit.freedesktop.org/gstreamer/orc/">Orc</a>, the Optimized Inner Loop Runtime Compiler</li>
+<a href="https://gitlab.freedesktop.org/gstreamer/orc">Orc</a>, the Optimized Inner Loop Runtime Compiler</li>
 <li>
 <a href="https://github.com/khaledhosny/ots">OTS</a>, the OpenType Sanitizer, parses and serializes OpenType files (OTF, TTF) and WOFF and WOFF2 font files, validating and sanitizing them as it goes. Used by Chromium and Firefox</li>
 <li>
@@ -431,7 +431,9 @@ format files</li>
 <li>
 <a href="https://github.com/eyelash/xi-gtk">xi-gtk</a>, a GTK+ front-end for the Xi editor</li>
 <li>
-<a href="https://cgit.freedesktop.org/xorg/xserver/">Xorg</a>, the X.org display server (not the default yet)</li>
+<a href="https://gitlab.freedesktop.org/xorg/xserver">Xorg</a>, the X.org display server (not the default yet)</li>
+<li>
+<a href="https://gitlab.freedesktop.org/xorg/test/xts">X Test Suite</a>, The X.org test suite</li>
 <li>
 <a href="https://github.com/pwmt/zathura">zathura</a>, a highly customizable and functional document viewer based on the
 girara user interface library and several document libraries</li>
