--- a/Wrap-dependency-system-manual.html
+++ b/Wrap-dependency-system-manual.html
@@ -251,11 +251,17 @@ revision = head
 <li>
 <code>source_url</code> - download url to retrieve the wrap-file source archive</li>
 <li>
+<code>source_fallback_url</code> - fallback URL to be used when download from <code>source_url</code> fails <em>Since: 0.55.0</em>
+</li>
+<li>
 <code>source_filename</code> - filename of the downloaded source archive</li>
 <li>
 <code>source_hash</code> - sha256 checksum of the downloaded source archive</li>
 <li>
 <code>patch_url</code> - download url to retrieve an optional overlay archive</li>
+<li>
+<code>patch_fallback_url</code> - fallback URL to be used when download from <code>patch_url</code> fails <em>Since: 0.55.0</em>
+</li>
 <li>
 <code>patch_filename</code> - filename of the downloaded overlay archive</li>
 <li>
