Bleep. Bloop. I am a bot.

--- a/Commands.html
+++ b/Commands.html
@@ -305,6 +305,7 @@ optional arguments:
 <h3 id="compile">compile</h3>
 <p><em>(since 0.54.0)</em></p>
 <pre><code>$ meson compile [-h] [-j JOBS] [-l LOAD_AVERAGE] [--clean] [-C BUILDDIR]
+                [--verbose]
 </code></pre>
 <p>Builds a default or a specified target of a configured meson project.</p>
 <pre><code>optional arguments:
@@ -318,6 +319,7 @@ optional arguments:
   --clean                               Clean the build directory.
   -C BUILDDIR                           The directory containing build files to
                                         be built.
+  --verbose                             Show more verbose output.
 </code></pre>
 <h4 id="examples1">Examples:</h4>
 <p>Build the project:</p>
