--- a/Release-notes-for-0-54-0.html
+++ b/Release-notes-for-0-54-0.html
@@ -446,6 +446,11 @@ source files should be put in each unity file.</p>
 target that has eight source files, Meson will generate two unity
 files each of which includes four source files. The old behaviour can
 be replicated by setting <code>unity_size</code> to a large value, such as 10000.</p>
+<h2 id="verbose-mode-for-meson-compile">Verbose mode for <code>meson compile</code>
+</h2>
+<p>The new option <code>--verbose</code> has been added to <code>meson compile</code> that will enable
+more verbose compilation logs. Note that for VS backend it means that logs will
+be less verbose by default (without <code>--verbose</code> option).</p>
 
     </div>
         
