--- a/Style-guide.html
+++ b/Style-guide.html
@@ -192,6 +192,10 @@ $('body').removeClass('no-script');
 Meson build files.</p>
 <h2 id="tabs-or-spaces">Tabs or spaces?</h2>
 <p>Always spaces.</p>
+<h2 id="naming-variable">Naming Variable</h2>
+<p>The most consistent naming convention is the snake case. Let say you would
+like to refer to your executable so something like <code>my_exe</code> would work or
+just <code>exe</code>.</p>
 <h2 id="naming-options">Naming options</h2>
 <p>There are two ways of naming project options. As an example for
 booleans the first one is <code>foo</code> and the second one is
