--- a/Wrap-dependency-system-manual.html
+++ b/Wrap-dependency-system-manual.html
@@ -267,6 +267,10 @@ revision = head
 <li>
 <code>patch_hash</code> - sha256 checksum of the downloaded overlay archive</li>
 <li>
+<code>patch_directory</code> - <em>Since 0.55.0</em> Overlay directory, alternative to <code>patch_filename</code> in the case
+files are local instead of a downloaded archive. The directory must be placed in
+<code>subprojects/packagefiles</code>.</li>
+<li>
 <code>lead_directory_missing</code> - for <code>wrap-file</code> create the leading
 directory name. Needed when the source file does not have a leading
 directory.</li>
