--- a/howtox.html
+++ b/howtox.html
@@ -204,7 +204,7 @@ building can be specified with <code>CC_FOR_BUILD</code>. You can use it in cros
 Meson, however. It is better to use the native and cross files. And the tools
 for the host platform in cross builds can only be specified with a cross file.</p>
 <p>There is a table of all environment variables supported <a href="Reference-tables.html#compiler-and-linker-selection-variables">Here</a></p>
-<h2 id="set-dynamic-linker">Set dynamic linker</h2>
+<h2 id="set-linker">Set linker</h2>
 <p><em>New in 0.53.0</em></p>
 <p>Like the compiler, the linker is selected via the <code>&lt;compiler variable&gt;_LD</code>
 environment variable, or through the <code>&lt;compiler entry&gt;_ld</code> entry in a native
